Fix crafting table